--- a/css/main.css
+++ b/css/main.css
@@ -248,7 +248,7 @@ footer{
 .top_btn{
 	margin-top: 20px;
 	margin-left: 50px;
-	box-shadow: 6px 4px 5px 1px gray;
+	box-shadow: 6px 4px 5px 1px pink;
 }
 }
 
