--- a/css/main.css
+++ b/css/main.css
@@ -245,6 +245,11 @@ footer{
 			width: 100%;
 			height: 700px;
 }
+.top_div h1 {
+	font-size: 15px;
+	font-weight: 200px;	
+
+}
 .top_btn{
 	margin-top: 20px;
 	margin-left: 50px;
