--- a/css/main.css
+++ b/css/main.css
@@ -255,6 +255,57 @@ footer{
 	margin-left: 50px;
 	box-shadow: 6px 4px 5px 1px pink;
 }
+	.top_btn{
+		width: 160px;
+		height: 80px;
+	margin-top: 150px;
+	margin-left: 150px;
+	box-shadow: none;
+}
+.top_div h1{
+	font-size: 50px;
+	margin-left: 10px!important;
+}
+.top_div p{
+	font-size: 15px;
+	margin-left: 10px!important;
+}
+.footer_nav{
+	margin: 20px 0px;
+}
+.footer_nav h1{
+	font-size: 30px;
+}
+.footer_nav li{
+	font-size: 20px;
+	text-align: center!important;
+}
+.footer_nav_hr{
+	margin-left: 50px;
+	color: red!important;
+	width: 100%!important;
+}
+.footer_use h2 , p , .footer_nav li ,.footer_nav h1 ,.footer_usefull_links h2 ,{
+	margin-left: 50px;
+}
+.footer_usefull_links li a i{
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+	padding: 10px;
+}
+.footer_icon{
+	margin-left: 20%;
+}
+.footer_input{
+	margin-left: 30%;
+	width: auto;
+	height: 50px;
+}
+.footer_input_btn{
+	width: 70px;
+	height: 50px;
+}
 }
 
 
