--- a/css/main.css
+++ b/css/main.css
@@ -174,6 +174,16 @@ footer{
 
 
 }
+.top{
+	background-image: url('../images/top_img.jpg');
+	background-size: 100% 100%;
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+	width: 100%;
+	height: 100vh;
+	clip-path: polygon(100% 0%, 100% 50%, 50% 100%, 0% 100% );
+	position: relative;
+}
 .top_div h1 {
 	font-size: 23px;
 	margin-left: -5px!important;
